# Templats

./: README.md
c++/CoreApplication/: CMakeLists.txt
c++/CoreApplication/src/: main.cpp
c++/CoreLibrary/: CMakeLists.txt
c++/CoreLibrary/include/CoreLibrary/: class.h
c++/CoreLibrary/src/: class.cpp  class_p.h
c++/CppApplication/: CMakeLists.txt
c++/CppApplication/src/: main.cpp
c++/CppLibrary/: CMakeLists.txt
c++/CppLibrary/include/CppLibrary/: class.h
c++/CppLibrary/src/: class.cpp
c++/CppLibrary/submodule/: CMakeLists.txt
c++/QuickApplication/: CMakeLists.txt
c++/QuickApplication/src/: main.cpp  main.qml
c++/QuickWidgetLibrary/: CMakeLists.txt
c++/QuickWidgetLibrary/include/QuickWidgetLibrary/: widget.h
c++/QuickWidgetLibrary/src/: widget.cpp
c++/UiWidgetLibrary/: CMakeLists.txt
c++/UiWidgetLibrary/include/WidgetLibrary/: widget.h
c++/UiWidgetLibrary/src/: widget.cpp  widget.ui  widget_p.h
c++/WidgetApplication/: CMakeLists.txt
c++/WidgetLibrary/: CMakeLists.txt
c++/WidgetLibrary/include/WidgetLibrary/: widget.h
c++/WidgetLibrary/src/: widget.cpp
go/BasicService/: Makefile  MyBestService.service
go/BasicService/internal/grpc_service/: grpc_service.go
go/BasicService/proto/: message.proto  service.proto
go/BasicService/test/: my_test.go
qml/QmlModel/: CMakeLists.txt
qml/QmlModel/src/: CMakeLists.txt
qml/QmlModel/src/cpp/: Core.cpp  Core.h  Model.cpp  Model.h  main.cpp
qml/QmlModel/src/qml/: DragDelegate.qml  List.qml  Main.qml  qml.qrc
